--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -1,4 +1,4 @@
 name: google-cloud-run-microservices
 runtime: dotnet
-main: Infra
+main: Infra/PulumiInfra
 description: An example of calling one Google Cloud Run service from another.
