Create an abstract, not Pulumi-specific definition of services.

--- a/Infra/PulumiInfra/PulumiInfra.csproj
+++ b/Infra/PulumiInfra/PulumiInfra.csproj
@@ -12,4 +12,8 @@
 		<PackageReference Include="Pulumi.Docker" Version="3.*" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\InfraLib\InfraLib.csproj" />
+	</ItemGroup>
+
 </Project>
